[SCRUM-307] fixed collapser positioning next to content; implemented examples in the demo of how to save scroll position
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@47998 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-components-demo/src/main/webapp/VAADIN/themes/demo/styles.css
+++ b/magnolia-ui-vaadin-components-demo/src/main/webapp/VAADIN/themes/demo/styles.css
@@ -1,6 +1,9 @@
 @import "../chameleon/styles.css";
+
 @import "../magnolia-ui-vaadin-components/collapser.css";
+
 @import "../magnolia-ui-vaadin-components/melodion.css";
+
 @import "../magnolia-ui-vaadin-components/rack.css";
 
 /* Application background */
@@ -131,4 +134,13 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
 
 .collapser {
   width: 198px;
+}
+
+.v-panel-content-melodion-collapser-rack>.v-csslayout,.v-panel-content-melodion-collapser-rack>.v-csslayout>.v-csslayout-margin,.v-panel-content-melodion-collapser-rack>.v-csslayout>.v-csslayout-margin>.v-csslayout-container
+  {
+  height: 100%;
+}
+
+.scroll>.v-panel-captionwrap,.v-panel-content-scroll,.v-panel-deco-scroll {
+  border: none;
 }
