--- a/magnolia-ui-vaadin-components/src/main/resources/VAADIN/themes/magnolia-ui-vaadin-components/collapser.css
+++ b/magnolia-ui-vaadin-components/src/main/resources/VAADIN/themes/magnolia-ui-vaadin-components/collapser.css
@@ -30,8 +30,12 @@
   overflow: hidden;
 }
 
-.collapser.collapsed {
+.collapser {
   float: right;
+}
+
+.collapser.collapsed {
+/*   float: right; */
   width: 29px;
 }
 
